@@ -22,6 +22,7 @@
 	<scriptfile>file.script.php</scriptfile> <!-- New in 1.6 -->
 	
 	<!-- SQL Files -->
+	<!-- Note: The Joomla! 1.0 query method is not supported in 1.6 -->
 	<install> <!-- Runs on install -->
 		<sql>
 			<file driver="mysql" charset="utf8">sql/install.mysql.utf8.sql</file>
