@@ -10,9 +10,32 @@
 		<license>License Info</license>
 		<version>1.6</version>	
 		<description>Site Alpha</description>
-		<scriptfile>alpha.scriptfile.php</scriptfile>
+		<scriptfile>alpha.scriptfile.php</scriptfile> <!-- New for 1.6 -->
+		
+		<!-- SQL Files -->
+		<!-- Note: SQL Support added in 1.6 for modules and plugins -->
+		<install> <!-- Runs on install -->
+			<sql>
+				<file driver="mysql" charset="utf8">sql/install.mysql.utf8.sql</file>
+				<file driver="mysql">sql/install.mysql.nonutf8.sql</file>
+			</sql>
+		</install>
+		<uninstall> <!-- Runs on uninstall -->
+			<sql>
+				<file driver="mysql" charset="utf8" folder="sql">sql/uninstall.mysql.utf8.sql</file>
+				<file driver="mysql" folder="sql">sql/uninstall.mysql.nonutf8.sql</file>
+			</sql>
+		</uninstall>
+		<update> <!-- Runs on update -->
+			<sql>
+				<file driver="mysql" charset="utf8">sql/update.mysql.utf8.sql</file>
+				<file driver="mysql">sql/update.mysql.nonutf8.sql</file>
+			</sql>
+		</update>
+		
         <files>
                 <filename module="mod_alpha">mod_alpha.php</filename>
+				<folder>sql</folder>
         </files>
 		<languages>
 			<language tag="en-GB">en-GB.mod_alpha.ini</language>
