@@ -1,0 +1,2 @@
+DROP TABLE IF EXISTS #__mod_alpha_nonutf8_install;
+DROP TABLE IF EXISTS #__mod_alpha_nonutf8_update;
