@@ -1,0 +1,2 @@
+DROP TABLE IF EXISTS #__mod_alpha_utf8_install;
+DROP TABLE IF EXISTS #__mod_alpha_utf8_update;
