@@ -14,6 +14,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+22-Jul-2008 Sam Moffatt
+ + Added sample SQL files for the site module sample
+
 18-Jul-2008 Sam Moffatt
  + Added Makefiles
  + Added submenu items to com_alpha
